# starter-tauri-app

./: README.md  bump.config.ts  eslint.config.js  package.json  pnpm-lock.yaml  tsconfig.app.json  vite.config.ts
.github/workflows/: release.yaml
src/: App.vue
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/resources/node-server/: server.mjs
src-tauri/src/: lib.rs  main.rs  menus.rs  node_runtime.rs
src/components/mode-toggle/: ModeToggle.vue  index.ts
src/components/ui/button-group/: ButtonGroupSeparator.vue
src/components/ui/calendar/: Calendar.vue  CalendarCellTrigger.vue  CalendarNextButton.vue  CalendarPrevButton.vue
src/components/ui/carousel/: CarouselNext.vue  CarouselPrevious.vue
src/components/ui/dialog/: DialogFooter.vue
src/components/ui/field/: FieldLabel.vue  FieldSeparator.vue
src/components/ui/form/: FormLabel.vue
src/components/ui/input-group/: InputGroupButton.vue  InputGroupInput.vue  InputGroupTextarea.vue
src/components/ui/item/: ItemSeparator.vue
src/components/ui/pagination/: PaginationFirst.vue  PaginationItem.vue  PaginationLast.vue  PaginationNext.vue  PaginationPrevious.vue
src/components/ui/range-calendar/: RangeCalendarCellTrigger.vue  RangeCalendarNextButton.vue  RangeCalendarPrevButton.vue
src/components/ui/sidebar/: Sidebar.vue  SidebarTrigger.vue
src/components/ui/toggle-group/: ToggleGroupItem.vue
src/composables/: useNodeRuntimeMenu.ts  useUpdater.ts
src/features/updater/: UpdaterDialog.vue
src/router/: index.ts
src/views/: HomePage.vue  NodeRuntimePage.vue
