[package]
name = "starter-tauri-app"
version = "0.1.0"
description = "A Tauri App"
authors = [ "you" ]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "starter_tauri_app_lib"
crate-type = [
  "staticlib",
  "cdylib",
  "rlib"
]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["image-png"] }
tauri-plugin-opener = "2"
tauri-plugin-process = "2"
tauri-plugin-updater = "2"
serde = { version = "1", features = [ "derive" ] }
serde_json = "1"
anyhow = "1"
flate2 = "1"
hex = "0.4"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "gzip"] }
sha2 = "0.10"
tar = "0.4"
tokio = { version = "1", features = ["fs", "io-util"] }
libc = "0.2"
xz2 = "0.1"
zip = { version = "2", default-features = false, features = ["deflate"] }
[target."cfg(target_os = \"macos\")".dependencies]
cocoa = "0.25"
